src/test/ui/parser/issue-5806.stderr
error: couldn't read $DIR/../parser: $ACCESS_DENIED_MSG (os error $ACCESS_DENIED_CODE)
  --> $DIR/issue-5806.rs:5:5
   |
LL | mod foo; //~ ERROR couldn't read
   |     ^^^

error: aborting due to previous error

